crates/panache-parser/tests/snapshots/yaml__yaml_suite_9C9N.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9C9N
input: "---\nflow: [a,\nb,\nc]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_WRONG_INDENTED_FLOW:wrong indentation for continued flow collection@14..16]
