crates/panache-parser/tests/snapshots/yaml__yaml_suite_9CWY.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9CWY
input: "key:\n - item1\n - item2\ninvalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@23..23]
