crates/panache-parser/tests/snapshots/yaml__yaml_suite_9DXL.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 9DXL
input: "Mapping: Document\n---\n# Empty\n...\n%YAML 1.2\n---\nmatches %: 20\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
