crates/panache-parser/tests/snapshots/yaml__yaml_suite_9FMG.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9FMG
input: "a:\n  b:\n    c: d\n  e:\n    f: g\nh: i\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
