crates/panache-parser/tests/snapshots/yaml__yaml_suite_9HCY.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9HCY
input: "!foo \"bar\"\n%TAG ! tag:example.com,2000:app/\n---\n!foo \"bar\"\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_DIRECTIVE_AFTER_CONTENT:directive requires document end before subsequent directives@11..43]
