crates/panache-parser/tests/snapshots/yaml__yaml_suite_9J7A.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9J7A
input: "foo:\n  bar: baz\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
