crates/panache-parser/tests/snapshots/yaml__yaml_suite_9KBC.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 9KBC
input: "--- key1: value1\n    key2: value2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_TRAILING_CONTENT_AFTER_DOCUMENT_START:trailing content after document start marker@4..8]
