crates/panache-parser/tests/snapshots/yaml__yaml_suite_9MAG.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9MAG
input: "---\n[ , a, b, c ]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_FLOW_SEQUENCE_COMMA:invalid comma position in flow sequence@6..7]
