crates/panache-parser/tests/snapshots/yaml__yaml_suite_9MMA.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9MMA
input: "%YAML 1.2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_DIRECTIVE_WITHOUT_DOCUMENT_START:directive requires an explicit document start marker@0..9]
