crates/panache-parser/tests/snapshots/yaml__yaml_suite_9SA2.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9SA2
input: "---\n- { \"single line\": value}\n- { \"multi\n  line\": value}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
